# nbody_visualization

./: .gitignore  Cargo.toml  Makefile  README.md  infinity.json  pyproject.toml
results/state_files/: 10_predicted.json  10_true.json  ann_infinity.json  ann_predicted_infinity.json  cnn_infinity.json  discovery_ann_infinity.json  discovery_cnn_infinity.json  discovery_rnn_infinity.json  infinity_predicted.json  infinity_true.json  lagrange.txt  predicted_infinity_v2.json  predicted_random_0.json  random_0.txt  random_1.txt  random_10.txt  random_2.txt  random_3.txt  random_4.txt  random_5.txt  random_6.txt  random_7.txt  random_8.txt  random_9.txt  rnn_infinity.json  rnn_infinity_predicted.json  test.txt
src/: main.py  main.rs
